[package]
name = "rust-ices-triage-scan"
version = "0.1.0"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"

[dependencies]
colored = "1.8"
futures-async-stream = "0.1.0-alpha.7"
futures-preview = "0.3.0-alpha.19"
lazy_static = "1.4"
prettytable-rs = "0.8"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
# surf = "1.0"
surf = { git = "https://github.com/rustasync/surf.git" }
tempfile = "3.1"
tokio = { version = "0.2.0-alpha.6", features = ["process"] }
