[package]
name = "rust-ices-triage-scan"
version = "0.1.0"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2.0"
futures-async-stream = "0.2"
futures = "0.3"
lazy_static = "1.4"
prettytable-rs = "0.8"
quick-error = "1.2"
regex = { version = "1.3", default-features = false, features = ["std", "unicode"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded"] }
